--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "p-limit": "^3.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
